@@ -1,7 +1,12 @@
 package no.nav.melosys.tjenester.gui;
 
+import java.util.Comparator;
+import java.util.List;
+
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
+import no.nav.melosys.domain.arkiv.BrukerIdType;
+import no.nav.melosys.domain.arkiv.Journalpost;
 import no.nav.melosys.domain.eessi.SedType;
 import no.nav.melosys.service.dokument.DokumentHentingService;
 import no.nav.melosys.service.dokument.brev.SedPdfData;
@@ -16,9 +21,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.WebApplicationContext;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Protected
 @RestController
@@ -41,15 +43,42 @@ public class DokumentTjeneste {
         this.aksesskontroll = aksesskontroll;
     }
 
-    @GetMapping(value = "/pdf/{journalpostID}/{dokumentID}", produces = {APPLICATION_PDF, APPLICATION_JSON_UTF8})
+    @GetMapping(value = "/{journalpostID}/{dokumentID}", produces = {APPLICATION_PDF, APPLICATION_JSON_UTF8})
     @ApiOperation(value = "hent dokument knyttet til journalpost", response = byte[].class)
     public ResponseEntity<byte[]> hentDokument(@PathVariable("journalpostID") String journalpostID,
                                                @PathVariable("dokumentID") String dokumentID) {
-        byte[] dokument;
-        dokument = dokumentHentingService.hentDokument(journalpostID, dokumentID);
+
+        Journalpost journalpost = dokumentHentingService.hentJournalpost(journalpostID);
+        if (journalpost.getBrukerIdType() == BrukerIdType.AKTØR_ID) {
+            aksesskontroll.auditAutoriserAktørID(journalpost.getBrukerId(), "Innsyn i dokument" + journalpost.getHoveddokument().getTittel());
+        }
+        if (journalpost.getBrukerIdType() == BrukerIdType.FOLKEREGISTERIDENT) {
+            aksesskontroll.auditAutoriserFolkeregisterIdent(journalpost.getBrukerId(), "Innsyn i dokument " + journalpost.getHoveddokument().getTittel());
+        }
+
+        byte[] dokument = dokumentHentingService.hentDokument(journalpostID, dokumentID);
         return lagResponseAvDokument(dokument, String.format("journalpost-dok-%s.pdf", dokumentID));
     }
 
+    @Deprecated(since = "MELOSYS-5899")
+    @GetMapping(value = "/pdf/{journalpostID}/{dokumentID}", produces = {APPLICATION_PDF, APPLICATION_JSON_UTF8})
+    @ApiOperation(value = "hent dokument knyttet til journalpost", response = byte[].class)
+    public ResponseEntity<byte[]> hentDokumentDeprecated(@PathVariable("journalpostID") String journalpostID,
+                                               @PathVariable("dokumentID") String dokumentID) {
+
+        Journalpost journalpost = dokumentHentingService.hentJournalpost(journalpostID);
+        if (journalpost.getBrukerIdType() == BrukerIdType.AKTØR_ID) {
+            aksesskontroll.auditAutoriserAktørID(journalpost.getBrukerId(), "Innsyn i dokument" + journalpost.getHoveddokument().getTittel());
+        }
+        if (journalpost.getBrukerIdType() == BrukerIdType.FOLKEREGISTERIDENT) {
+            aksesskontroll.auditAutoriserFolkeregisterIdent(journalpost.getBrukerId(), "Innsyn i dokument " + journalpost.getHoveddokument().getTittel());
+        }
+
+        byte[] dokument = dokumentHentingService.hentDokument(journalpostID, dokumentID);
+        return lagResponseAvDokument(dokument, String.format("journalpost-dok-%s.pdf", dokumentID));
+    }
+
+    @Deprecated(since = "MELOSYS-5899")
     @GetMapping("/oversikt/{saksnummer}")
     @ApiOperation(value = "Henter alle dokumenter knyttet til en fagsak", response = JournalpostInfoDto.class, responseContainer = "List")
     public ResponseEntity<List<JournalpostInfoDto>> hentDokumenter(@PathVariable("saksnummer") String saksnummer) {
@@ -57,11 +86,12 @@ public class DokumentTjeneste {
             .stream()
             .map(JournalpostInfoDto::av)
             .sorted(Comparator.comparing(JournalpostInfoDto::hentGjeldendeTidspunkt, Comparator.nullsFirst(Comparator.reverseOrder())))
-            .collect(Collectors.toList());
+            .toList();
         return ResponseEntity.ok(dokumentListe);
     }
 
-    @PostMapping(value = "pdf/sed/utkast/{behandlingID}/{sedType}",
+    @Deprecated(since = "MELOSYS-5899")
+    @PostMapping(value = "/pdf/sed/utkast/{behandlingID}/{sedType}",
         produces = {MediaType.APPLICATION_PDF_VALUE, MediaType.APPLICATION_JSON_VALUE})
     public ResponseEntity<byte[]> produserUtkastSed(@PathVariable("behandlingID") long behandlingID,
                                                     @PathVariable("sedType") SedType sedType,
